<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMenuActivity"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/edadmin_menu_image"
            android:layout_marginTop="30dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edadmin_menu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/item_name">
        </EditText>
        <EditText
            android:id="@+id/edadmin_menu_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/item_price">

        </EditText>
        <EditText
            android:id="@+id/edadmin_menu_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/item_drescription">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/save"
            android:id="@+id/edadmin_menu_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp">

        </Button>

    </LinearLayout>

</LinearLayout>